@@ -14,6 +14,7 @@ public class BootUpReceiver extends BroadcastReceiver {
 				new ShellEnv(context).deployCmd("start");
 			}
 		}).start();
+		MainActivity.notification(context);
 	}
 
 }
